--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -591,6 +591,9 @@ a.button:hover,
 
 #wall-js a.wall {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 #wall-js .wall .wall__cta {
@@ -669,7 +672,8 @@ a.button:hover,
   align-items: center;
   padding: 0.3rem 0.6rem;
   color: white;
-  background: #2989EF;
+  background-color: #2989EF;
+  background-image: linear-gradient(to bottom right, #2989EF, #13CDFF);
   text-decoration: none;
   font-size: 0.8rem;
   font-weight: bold;
